@@ -5,16 +5,15 @@ import com.baomidou.mybatisplus.generator.config.OutputFile;
 import com.baomidou.mybatisplus.generator.config.rules.DbColumnType;
 
 import java.sql.Types;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 public class CodeGenerator {
     public static void main(String[] args) {
-        String url = "";
-        String username = "";
-        String password = "";
-        List<String> tableNames = Arrays.asList("");
+        String url = "jdbc:mysql://gz-cdb-3hs7lo95.sql.tencentcdb.com:28123/eyesspace_dev?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2B8";
+        String username = "dev";
+        String password = "eyesYeager@Db24@dev!";
+        List<String> tableNames = List.of("footprint_pic");
 
         FastAutoGenerator.create(url, username, password)
                 .globalConfig(builder -> {
